updated swagger file & add lists and factionhandler
